# domain-driven-design

./: .gitignore  README.md
microservices/delivery/: CMakeLists.txt  Makefile
microservices/delivery/configs/: config_vars.testing.yaml  config_vars.yaml  static_config.yaml
microservices/delivery/contracts/: api_v1_couriers.yaml  api_v1_orders.yaml  api_v1_orders_active.yaml  openapi.yaml
microservices/delivery/postgresql/schemas/: 20240526213108_init.sql  20240526213109_init.sql
microservices/delivery/src/: main.cpp
microservices/delivery/src/api/adapters/http/api_v1_couriers/: controller.cpp  controller.hpp  request.cpp  request.hpp
microservices/delivery/src/api/adapters/http/api_v1_orders/: controller.cpp  controller.hpp  request.cpp  (+1 more)
microservices/delivery/src/core/application/: exceptions.cpp  exceptions.hpp
microservices/delivery/src/core/domain/courier/: courier.cpp  courier.hpp  courier_mock.cpp  courier_mock_test.cpp  courier_mock_test.hpp  courier_status.cpp  courier_status.hpp  courier_test.cpp  exceptions.cpp  exceptions.hpp  fwd.hpp  status.cpp  status.hpp  strong_typedefs.cpp  strong_typedefs.hpp  transport.cpp  transport.hpp
microservices/delivery/src/core/domain/courier_aggregate/: courier.cpp  courier.hpp  courier_status.cpp  courier_status.hpp  courier_test.cpp  exceptions.cpp  exceptions.hpp  strong_typedefs.cpp  strong_typedefs.hpp  transport.cpp  transport.hpp
microservices/delivery/src/core/domain/order/: exceptions.cpp  exceptions.hpp  fwd.hpp  order.cpp  order.hpp  order_mock.cpp  order_mock.hpp  order_mock_test.cpp  order_mock_test.hpp  order_status.cpp  order_status.hpp  order_test.cpp  status.cpp  status.hpp  strong_typedefs.cpp  strong_typedefs.hpp
microservices/delivery/src/core/domain/order_aggregate/: exceptions.cpp  exceptions.hpp  order.cpp  order.hpp  order_status.cpp  order_status.hpp  order_test.cpp  strong_typedefs.cpp  strong_typedefs.hpp
microservices/delivery/src/core/domain/shared_kernel/: exceptions.cpp  exceptions.hpp  location.cpp  location.hpp  location_test.cpp  strong_typedefs.cpp  strong_typedefs.hpp  weight.cpp  weight.hpp  weight_mock_test.cpp  weight_mock_test.hpp  weight_test.cpp
microservices/delivery/src/core/domain_services/: dispatch_service.cpp  dispatch_service.hpp  dispatch_service_test.cpp  idispatch_service.hpp
microservices/delivery/src/core/domain_services/dispatch_service/: dispatch_service.cpp  fwd.hpp  idispatch_service.cpp  idispatch_service.hpp  iservice.cpp  iservice.hpp  service.cpp  service.hpp  service_mock.cpp  service_mock.hpp  service_mock_test.cpp  service_test.cpp
microservices/delivery/src/core/ports/: exceptions.cpp  exceptions.hpp  icourier_repository.cpp  icourier_repository.hpp  iorder_repository.cpp  iorder_repository.hpp
microservices/delivery/src/core/ports/courier_repository/: fwd.hpp  irepository.hpp  repository_mock.cpp  repository_mock.hpp  repository_mock_test.cpp  repository_mock_test.hpp
microservices/delivery/src/core/ports/geocode_maps_client/: client_mock.cpp  client_mock_test.cpp  client_mock_test.hpp  iclient.cpp  iclient.hpp  ilocation.cpp  ilocation.hpp
microservices/delivery/src/core/ports/order_repository/: fwd.hpp  irepository.cpp  irepository.hpp  repository_mock.cpp  repository_mock.hpp  repository_mock_test.cpp  repository_mock_test.hpp
microservices/delivery/src/core/ports/unit_of_work/: fwd.hpp  irun_transaction_context.cpp  irun_transaction_context.hpp  iunit_of_work.cpp  iunit_of_work.hpp
microservices/delivery/src/infrastructure/adapters/postgres/: courier_repository.cpp  courier_repository.hpp  order_repository.cpp  order_repository.hpp
microservices/delivery/src/utils/: container.cpp  container.hpp  memory.cpp  memory.hpp  non_copyable_and_moveable.cpp  non_copyable_and_moveable.hpp  optional.cpp  optional.hpp  ranges.cpp  ranges.hpp  variant.cpp  variant.hpp
microservices/delivery/src/utils/refinement_type/: not_empty.cpp  not_empty.hpp  refinement_type.cpp  refinement_type.hpp  refinement_type_test.cpp  should_be_positive.cpp  should_be_positive.hpp
microservices/delivery/tests/: conftest.py  fixtures.py  requests.py  test_api_v1_orders.py
microservices/delivery/tests/delivery/: test_api_v1_couriers.py  test_api_v1_orders.py  test_api_v1_orders_active.py
microservices/delivery/tests/delivery/fixtures/: api_v1_couriers.py  api_v1_orders.py  api_v1_orders_active.py  courier_repository.py  order_repository.py
microservices/delivery/tests/delivery/utils/: types.py
(+136 files in other folders)
